@@ -1,6 +1,11 @@
 2020-11-23  Timm Bäder  <tbaeder@redhat.com>
 
 	* segment_report_module.c (dwfl_segment_report_module): Remove
+	release_buffer, call memory_callback directly.
+
+2020-11-23  Timm Bäder  <tbaeder@redhat.com>
+
+	* segment_report_module.c (dwfl_segment_report_module): Remove
 	segment_read, call memory_callback directly.
 
 2020-11-19  Andreas Krebbel  <krebbel@linux.ibm.com>
